fixed alignment

--- a/css/new-home.css
+++ b/css/new-home.css
@@ -55,7 +55,7 @@ td {
 /* row 1 */
 
 .hero-content {
-    padding: 12rem 0 19rem 0;
+    padding: 12rem 0 21rem 0;
 }
 
 .hero-content * {
